tests/baselines/reference/interfaceDeclaration3.errors.txt
interfaceDeclaration3.ts(3,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
interfaceDeclaration3.ts(7,16): error TS2416: Property 'item' in type 'C1' is not assignable to the same property in base type 'I1'.
  Type 'number' is not assignable to type 'string'.
interfaceDeclaration3.ts(25,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
interfaceDeclaration3.ts(28,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
interfaceDeclaration3.ts(32,16): error TS2416: Property 'item' in type 'C1' is not assignable to the same property in base type 'I1'.
  Type 'number' is not assignable to type 'string'.
interfaceDeclaration3.ts(54,11): error TS2430: Interface 'I2' incorrectly extends interface 'I1'.
  Types of property 'item' are incompatible.
    Type 'string' is not assignable to type 'number'.


==== interfaceDeclaration3.ts (6 errors) ====
    interface I1 { item:number; }
    
    module M1 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        interface I1 { item:string; }  
        interface I2 { item:number; }   
        class C1 implements I1 {
            public item:number;
                   ~~~~
!!! error TS2416: Property 'item' in type 'C1' is not assignable to the same property in base type 'I1'.
!!! error TS2416:   Type 'number' is not assignable to type 'string'.
        }
        class C2 implements I1 {
            public item:string;
        }
        class C3 implements I2 {
            public item:number;
        }
        
        class C4 implements M2.I1 { 
            public item:string;
        }
    
        class C5 implements M2.M3.I1 {
            public item:string;
        }
    }
    
    export module M2 {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export interface I1 { item:string; }
        export interface I2 { item:string; }
        export module M3 {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            export interface I1 { item:string; }
        }
        class C1 implements I1 {
            public item:number;    
                   ~~~~
!!! error TS2416: Property 'item' in type 'C1' is not assignable to the same property in base type 'I1'.
!!! error TS2416:   Type 'number' is not assignable to type 'string'.
        }
        class C2 implements I1 {
            public item:string;    
        }
        class C3 implements I2 {
            public item:string;    
        }
    }
    
    class C1 implements I1 {
        public item:number;
    }
    
    class C2 implements M2.I1 { 
        public item:string;
    }
    
    class C3 implements M2.M3.I1 {
        public item:string;
    }
    
    interface I2 extends I1 { item:string; }
              ~~
!!! error TS2430: Interface 'I2' incorrectly extends interface 'I1'.
!!! error TS2430:   Types of property 'item' are incompatible.
!!! error TS2430:     Type 'string' is not assignable to type 'number'.
    